unpackaged/main/default/objects/MID__c/MID__c.object-meta.xml
<CustomObject>
    <label>MID</label>
    <nameField>
        <displayFormat>MID-{0000000}</displayFormat>
        <label>MID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MIDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>