unpackaged/main/default/objects/MID__c/fields/GBTaxFree_MID__c.field-meta.xml
<CustomField>
    <fullName>GBTaxFree_MID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GBTaxFree MID</label>
    <referenceTo>GBTaxFreeMID__c</referenceTo>
    <relationshipLabel>MIDs</relationshipLabel>
    <relationshipName>MIDs</relationshipName>
    <type>Lookup</type>
</CustomField>