unpackaged/main/default/objects/MID__c/fields/Terminal_ID_TID__c.field-meta.xml
<CustomField>
    <fullName>Terminal_ID_TID__c</fullName>
    <description>TID</description>
    <label>Terminal ID(TID)</label>
    <type>TextArea</type>
</CustomField>