unpackaged/main/default/objects/MID__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Acquirer</fullName>
            </value>
            <value>
                <fullName>AIB</fullName>
            </value>
            <value>
                <fullName>Alipay</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>Diners</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>FIPS</fullName>
            </value>
            <value>
                <fullName>GB Tax Free</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Global Payments</fullName>
            </value>
            <value>
                <fullName>Hobex/Fintrax</fullName>
            </value>
            <value>
                <fullName>JCB</fullName>
            </value>
            <value>
                <fullName>Planet</fullName>
            </value>
            <value>
                <fullName>PMS</fullName>
            </value>
            <value>
                <fullName>Union Pay</fullName>
            </value>
            <value>
                <fullName>WeChat Pay</fullName>
            </value>
            <value>
                <fullName>Worldpay</fullName>
            </value>
            <value>
                <fullName>Worldline PIBA MID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>