unpackaged/main/default/objects/MID__c/validationRules/GBTF_Blank_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>GBTF_Blank_Only</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Type__c) &lt;&gt; &quot;GB Tax Free&quot;,  ISBLANK(MID__c))</errorConditionFormula>
    <errorDisplayField>MID__c</errorDisplayField>
    <errorMessage>You must enter a Merchant ID.</errorMessage>
</ValidationRule>