unpackaged/main/default/objects/MID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Shop__c</columns>
    <columns>Account_ID__c</columns>
    <columns>MID__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>